--- a/GoogleAuthApp/GoogleAuthApp.csproj
+++ b/GoogleAuthApp/GoogleAuthApp.csproj
@@ -285,6 +285,7 @@
     <Compile Include="Models\UserDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Content Include="Styles\Profile.css" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
@@ -321,7 +322,7 @@
     <Content Include="Scripts\sliderSettings.js" />
     <Content Include="Styles\arrow-left.png" />
     <Content Include="Styles\arrow-right.jpg" />
-    <Content Include="Styles\Profile.css" />
+    <Content Include="Styles\OwnProfile.css" />
     <Content Include="Styles\SearchUser.css" />
     <Content Include="Styles\sliderStyle.css" />
     <Content Include="Web.config" />
